--- a/Code/produk/produk.css
+++ b/Code/produk/produk.css
@@ -295,5 +295,38 @@
     width: 90px;
 }
 
+/* Responsive */
+@media only screen and (max-width: 392px) {
+    .main{
+        width: 90%;
+        flex-direction: column;
+    }
 
+    .kotakKanan{
+        width: 100%;
+        order: 1;
+    }
 
+    .deskripsiKiri{
+        width: 60%;
+    }
+
+    .deskripsiKanan{
+        width: 40%;
+    }
+    
+    .kotakKiri{
+        height: auto;
+        width: 100%;
+        order: 2;
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .card{
+        width: 180px;
+        height: 180px;
+        margin-top: 20px;
+    }
+}
