--- a/Code/addStok/addStok.css
+++ b/Code/addStok/addStok.css
@@ -68,3 +68,18 @@ input[type=file]::-webkit-file-upload-button{
     background-color: #604E49;
     transition: 0.2s;
 }
+
+@media only screen and (max-width: 392px) {
+    .main{
+        width: 90%;
+    }
+
+    .isiEdit2{
+        min-width: 320px;
+        min-height: 500px;
+        max-width: 320px;
+        max-height: 500px;
+        overflow: hidden;
+    }
+    
+}
