--- a/Code/editProduk/editProduk.css
+++ b/Code/editProduk/editProduk.css
@@ -236,3 +236,22 @@
     background-color: #604E49;
     transition: 0.2s;
 }
+
+/* Responsive */
+@media only screen and (max-width: 392px) {
+    .main{
+        width: 90%;
+    }
+
+    .isiEdit2{
+        min-width: 320px;
+        min-height: 500px;
+        max-width: 320px;
+        max-height: 500px;
+        overflow: hidden;
+    }
+
+    .kotakSampah{
+        width: 10%;
+    }
+}
